Fix for hamburger menu not showing.
Closes https://github.com/armadillica/flamenco/issues/212

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,6 +37,11 @@ h2 {
   padding-top: 18px;
 }
 
+/* Fixes the hamburger menu not showing */
+button.navbar-toggle span.icon-bar {
+    border: 2px solid white;
+}
+
 .nav li a:hover {
   background-color: transparent;
   color: rgba(255,255,255,.8);
